# lan-file-sync

./: CMakeLists.txt  README.md
lanswift/: build.sh
lanswift/src/core/: Protocol.h  RecvWorker.cpp  RecvWorker.h  ResumeManager.h  SendWorker.cpp  SendWorker.h  TransferManager.cpp  TransferManager.h
lanswift/src/ui/: FileListView.h  ProgressWidget.cpp  ProgressWidget.h
src/: main.cpp
src/core/: MD5Helper.cpp  MD5Helper.h  ResumeManager.cpp  ThreadPool.h
src/ui/: FileListView.cpp  MainWindow.cpp  MainWindow.h
